// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile d medium 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
}
</style>

<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": "10px",
      "paddingBottom": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile d small 1`] = `
<style>
.IS1 {
  width: 50%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 10px;
  font-size: 22;
  line-height: 22px;
}

.IS4 {
  width: 50%;
  padding-left: 10px;
  padding-bottom: 5px;
}
</style>

<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile d without breakpoint should be like small 1`] = `
<style>
.IS1 {
  width: 50%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 10px;
  font-size: 22;
  line-height: 22px;
}

.IS4 {
  width: 50%;
  padding-left: 10px;
  padding-bottom: 5px;
}
</style>

<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;
